# internal/request/article.go
@@ -10,28 +10,27 @@ type ArticleListRequest struct {
 }
 
 type ArticleListByTIDRequest struct {
-	TagID uint32 `form:"tag_id" json:"tag_id" binding:"gte=1"`
+	TagID uint32 `form:"tag_id" json:"tag_id" binding:"required,gte=1"`
 	State uint8  `form:"state,default=1" json:"state,default=1" binding:"oneof=0 1"`
 }
 
 type CreateArticleRequest struct {
-	TagIDList     []uint32 `form:"tag_ids" json:"tag_ids"`
-	Title         string   `form:"title" json:"title" binding:"required,min=2,max=100"`
-	Desc          string   `form:"desc" json:"desc" binding:"required,min=2,max=255"`
-	Content       string   `form:"content" json:"content" binding:"required,min=2,max=4294967295"`
-	CoverImageUrl string   `form:"cover_image_url" json:"cover_image_url" binding:"url"`
-	CreatedBy     string   `form:"created_by" json:"created_by" binding:"required,min=2,max=100"`
-	State         uint8    `form:"state,default=1" json:"state,default=1" binding:"oneof=0 1"`
+	TagID         uint32 `form:"tag_id" json:"tag_id"`
+	Title         string `form:"title" json:"title" binding:"required,min=2,max=100"`
+	Desc          string `form:"desc" json:"desc" binding:"max=255"`
+	Content       string `form:"content" json:"content" binding:"required,min=2,max=4294967295"`
+	CoverImageUrl string `form:"cover_image_url" json:"cover_image_url"`
+	CreatedBy     string `form:"created_by" json:"created_by" binding:"required,min=2,max=100"`
+	State         uint8  `form:"state,default=1" json:"state,default=1" binding:"oneof=0 1"`
 }
 
-// TODO: 理清楚 update article 的时候，tag 的关系
-// TODO: 可选参数
 type UpdateArticleRequest struct {
 	ArticleID     uint32 `form:"article_id" json:"article_id" binding:"required,gte=1"`
-	Title         string `form:"title" json:"title" binding:"min=2,max=100"`
-	Desc          string `form:"desc" json:"desc" binding:"min=2,max=255"`
-	Content       string `form:"content" json:"content" binding:"min=2,max=4294967295"`
-	CoverImageUrl string `form:"cover_image_url" json:"cover_image_url" binding:"url"`
+	TagID         uint32 `form:"tag_id" json:"tag_id"`
+	Title         string `form:"title" json:"title"`
+	Desc          string `form:"desc" json:"desc"`
+	Content       string `form:"content" json:"content"`
+	CoverImageUrl string `form:"cover_image_url" json:"cover_image_url"`
 	ModifiedBy    string `form:"modified_by" json:"modified_by" binding:"required,min=2,max=100"`
 	State         uint8  `form:"state,default=1" json:"state,default=1" binding:"oneof=0 1"`
 }
